<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_turtle_control</name>
  <version>0.0.2</version>
  <description>A 2D MPC for ROS2 turtlebot</description>
  <maintainer email="kmoran.1512@gmail.com">Kyle</maintainer>
  <license>Apache 2.0</license>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>turtlesim</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
